# timing-analysis-tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: Filesystem.cmake
docs/: api_reference.md  developer_guide.md  user_guide.md
examples/: sample_timing.rpt
scripts/: run_timing_analysis.tcl
src/: analyzer.cpp  analyzer.h  main.cpp  parser.cpp  parser.h  utils.cpp  utils.h
tests/: test_analyzer.cpp  test_parser.cpp
